# material-colors

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  crates.js  help.html  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: CI.yml
material_colors/: all.html  index.html  sidebar-items.js  type.IndexMap.html
material_colors/blend/: fn.cam16_ucs.html  fn.harmonize.html  fn.hct_hue.html  index.html  sidebar-items.js
material_colors/color/: constant.HASH.html  constant.SRGB_TO_XYZ.html  constant.WHITE_POINT_D65.html  constant.XYZ_TO_SRGB.html  fn.delinearized.html  fn.lab_f.html  fn.lab_invf.html  fn.linearized.html  fn.lstar_from_y.html  fn.y_from_lstar.html  index.html  sidebar-items.js  struct.Argb.html  struct.Lab.html  struct.LinearRgb.html  struct.Rgb.html  struct.Xyz.html
material_colors/contrast/: fn.darker.html  fn.darker_unsafe.html  fn.lighter.html  fn.lighter_unsafe.html  fn.ratio_of_tones.html  fn.ratio_of_ys.html  index.html  sidebar-items.js
material_colors/dislike/: fn.fix_if_disliked.html  fn.is_disliked.html  index.html  sidebar-items.js
material_colors/dynamic_color/: index.html  sidebar-items.js  struct.DynamicColor.html  struct.ExtendedColorData.html  type.DynamicSchemeFn.html  type.DynamicSchemeFnRef.html
material_colors/error/: enum.Error.html  index.html
material_colors/hct/: index.html  sidebar-items.js  struct.Hct.html
material_colors/image/: enum.FilterType.html  index.html  sidebar-items.js  struct.Image.html  struct.ImageReader.html  trait.AsPixels.html
material_colors/palette/: enum.Palette.html  index.html  sidebar-items.js  struct.CorePalette.html  struct.CorePalettes.html  struct.TonalPalette.html
material_colors/quantize/: index.html  sidebar-items.js
material_colors/scheme/: index.html  sidebar-items.js  struct.Scheme.html  struct.SchemeFromPalette.html
material_colors/score/: index.html  sidebar-items.js  struct.Score.html  struct.ScoredHCT.html
material_colors/temperature/: index.html  sidebar-items.js  struct.TemperatureCache.html
material_colors/theme/: index.html  sidebar-items.js  struct.ColorGroup.html  struct.CustomColor.html  struct.CustomColorGroup.html  struct.Palettes.html  struct.Schemes.html  struct.Theme.html  struct.ThemeBuilder.html
material_colors/utils/: index.html  sidebar-items.js  trait.FromRef.html
search.desc/material_colors/: material_colors-desc-0-.js
search.index/: 003d6b6bb8.js  00aa49b846.js  01bc7b266e.js  0252d81f425a.js  03e54f8d7042.js  0466b773aa.js  0470d41e06ab.js  056d75ccb080.js  0581f07a0f.js  073e6b5936.js  0785114a8f.js  09430a7a82b8.js  0ad7e77c9407.js  0af8128b17.js  0b75732355.js  0bb231d128c4.js  0cfbfff044c2.js  0d363a4d4e.js  0e08982401.js  0e57f1e198.js  0f218b7bee.js  10721fc3cca0.js  10885cad485f.js  10ef14ca61c0.js  12da76bb0341.js  12fcb0b8d752.js  14a53f2a3946.js  154b4bca79.js  15a38527d1ec.js  15e2fa4d525b.js  16c03b53e950.js  16d66c62de.js  1704d068a8.js  17d737576087.js  17fc9ae87573.js  18d6ba4abfa1.js  18dc75ab6d.js  194b78bed4.js  19c1caab1630.js  1af3371480.js  (+133 more)
search.index/crateNames/: cc115ea455.js
search.index/desc/: 25bcc2a5d2.js  4c44035cb57d.js
search.index/entry/: 74a413d29b84.js  e48dd64c2f.js
search.index/function/: 11003928fb.js  e05de9d3ae54.js
search.index/generic_inverted_index/: 6458fb4149.js  fffe30ce29f0.js
src/: blend.rs  color.rs  contrast.rs  dislike.rs  dynamic_color.rs  error.rs  hct.rs  image.rs  lib.rs  palettes.rs  quantize.rs  scheme.rs  score.rs  temperature.rs  theme.rs  utils.rs
tests/: image.rs  theme.rs
(+291 files in other folders)
